# backend

./: .env.example  README.md  pyproject.toml
src/app/: __init__.py  main.py
src/app/application/: __init__.py
src/app/application/ports/: __init__.py
src/app/application/service_interfaces/: __init__.py
src/app/application/services/: __init__.py
src/app/domain/: __init__.py
src/app/infrastructure/: __init__.py
src/app/infrastructure/adapters/: __init__.py
src/app/infrastructure/api/: __init__.py  dependencies.py
src/app/infrastructure/api/routers/: __init__.py  health.py
src/app/infrastructure/config/: __init__.py  settings.py
tests/: conftest.py  test_health.py
